# raley-bot

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  PR.md  README.md  api.py  cli.py  install.sh  mcp_server.py  preferences.example.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
raley_assistant/: __init__.py  api.py  auth.py  cart_builder.py  cli.py  cookies.py  db.py  domains.py  knowledge.py  mcp_server.py  memory.py  preferences.py  reasoning.py  t1d.py  unit_pricing.py
tests/: conftest.py  test_api_cart.py  test_cart_builder.py  test_db.py  test_mcp_server.py  test_new_features.py  test_preferences.py  test_reasoning.py  test_unit_pricing.py
