[project]
name = "raley-assistant"
version = "0.3.0rc1"
description = "Your dependable grocery shopping pal with MCP integration"
requires-python = ">=3.11"
license = {text = "Unlicense"}
dependencies = [
    "beautifulsoup4",
    "lxml",
    "rich",
    "click",
    "mcp>=1.0.0",
    "helium",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
raley = "raley_assistant.cli:main"
raley-mcp = "raley_assistant.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["raley_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
