[project]
name = "raley-assistant"
version = "0.3.0rc1"
description = "Your dependable grocery shopping pal with MCP integration"
requires-python = ">=3.11"
license = {text = "Unlicense"}
keywords = [
    "grocery",
    "shopping",
    "mcp",
    "cli",
    "price-tracking",
    "coupon",
    "unit-pricing",
    "claude-desktop",
    "sqlite",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "beautifulsoup4",
    "lxml",
    "rich",
    "click",
    "mcp>=1.0.0",
]

[project.urls]
Repository = "https://github.com/johnzfitch/raley-bot"
"Bug Tracker" = "https://github.com/johnzfitch/raley-bot/issues"

[project.optional-dependencies]
login = [
    "helium",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
raley = "raley_assistant.cli:main"
raley-bot = "raley_assistant.cli:main"
raley-mcp = "raley_assistant.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["raley_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
